--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "catalanSolver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "public/js/index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
