--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "public/js/index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node server.js"
   },
   "private": true,
   "dependencies": {
