--- a/vercel.json
+++ b/vercel.json
@@ -12,23 +12,17 @@
   ],
   "routes": [
     {
+      "src": "/js/pkg/(.*)",
+      "headers": { "content-type": "application/wasm" },
+      "dest": "/public/js/pkg/$1"
+    },
+    {
       "src": "/js/(.*)",
       "dest": "/public/js/$1"
     },
     {
       "src": "/(.*)",
       "dest": "server.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*).wasm",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/wasm"
-        }
-      ]
     }
   ]
 }
