--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,11 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/gml-files",
-      "dest": "server.js"
-    },
-    {
-      "src": "/game",
-      "dest": "public/game.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "public/$1"
-    }
+    { "src": "/gml-files/(.*)", "dest": "/server.js" },
+    { "src": "/game", "dest": "/server.js" },
+    { "src": "/(.*)", "dest": "/server.js" }
   ]
 }
